OwlsNest: Forward-port notification counters
Change-Id: I94b8fd3820011d0c4df88492afbaca8f5ccebb34
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/xml/notification.xml
+++ b/res/xml/notification.xml
@@ -44,4 +44,10 @@
         android:title="@string/notification_sound_vib_screen_on_title"
         android:summary="@string/notification_sound_vib_screen_on_summary"
         android:defaultValue="true" />
+
+    <com.aosip.support.preference.SystemSettingSwitchPreference
+        android:key="status_bar_notif_count"
+        android:title="@string/status_bar_notif_count_title"
+        android:summary="@string/status_bar_notif_count_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
